# musl-rust-segfault

./: Cargo.toml  Makefile  README.md  build.rs  linker
.cargo/: config
src/: main.cc  main.rs  test.cc
